--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce-platform",
+  "name": "shopmate",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -13,15 +13,21 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
-    "nodemailer": "^7.0.5"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
+    "redis": "^5.8.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
